<resources>
    <string name="app_name">DHP-500DH</string>
    <string name="socket_test">Socket测试</string>
    <string name="button_connect">connect</string>
    <string name="button_reset">Reset</string>
    <string name="button_move">Move</string>
    <string name="action_settings">Settings</string>
    <string name="number">序号</string>
    <string name="type">类型</string>
    <string name="title">选择方案</string>
    <string name="cancel">取消</string>
    <string name="allow">确定</string>
    <string name="activity_glue_default">设为默认</string>
    <string name="activity_glue_alone_title">点参数设置</string>
    <string name="activity_glue_alone_liebiao">参数列表</string>
    <string name="activity_weld_work_yureshijian">预热时间:</string>
    <string name="activity_weld_work_sendSnSumFir">一次送锡量:</string>
    <string name="activity_weld_work_sendSnSumSec">二次送锡量:</string>
    <string name="activity_weld_work_sendSnSumFourth">四次送锡量:</string>
    <string name="activity_weld_work_dipDistance">倾斜距离:</string>
    <string name="activity_weld_work_stopSnTimeThird">三次停锡时间:</string>
    <string name="activity_weld_work_sendSnSpeedThird">三次送锡速度:</string>
    <string name="activity_glue_alone_isSn">是否出锡:</string>
    <string name="activity_weld_blow_isSn">是否吹锡:</string>
    <string name="activity_glue_alone_isSus">是否减速:</string>
    <string name="activity_glue_alone_isOut">是否抬停:</string>
    <string name="activity_glue_alone_isPause">是否暂停:</string>
    <string name="activity_glue_alone_gluePort">点胶口:</string>
    <string name="activity_weld_work_sendSnSpeedFir">一次送锡速度:</string>
    <string name="activity_weld_work_sendSnSpeedSec">二次送锡速度:</string>
    <string name="activity_weld_work_stopSnStimeSec">二次停锡时间:</string>
    <string name="activity_weld_work_stopSnTimeFourth">四次停锡时间:</string>
    <string name="activity_weld_work_upHeight">抬起高度:</string>
    <string name="activity_weld_work_xiecha_angle">斜插角度:</string>
    <string name="activity_weld_work_angle">度</string>
    <string name="activity_weld_work_sendSnSpeedFourth">四次送锡速度:</string>
    <string name="activity_weld_work_sendSnSumThird">三次送锡量:</string>
    <string name="activity_weld_work_sendSnSpeed">送锡速度:</string>
    <string name="activity_weld_work_preSendSnSum">预送锡量:</string>
    <string name="activity_weld_work_moveSpeed">轨迹速度:</string>
    <string name="activity_weld_work_preSendSnSpeed">预送锡速度:</string>
    <string name="activity_weld_work_preHeatTime">预热时间:</string>
    <string name="activity_weld_work_stopSnTime">停锡延时:</string>
    <string name="activity_weld_work_blowSnTime">吹锡延时:</string>
    <string name="activity_glue_stopGlueTimePrev">停胶前延时:</string>
    <string name="activity_glue_stopGlueTime">停胶(后)延时:</string>
    <string name="activity_glue_lineNum">直线条数:</string>
    <string name="activity_glue_startDir">起始方向:</string>
    <string name="activity_glue_clearGlueTime">清胶延时:</string>
    <string name="activity_glue_timeMode">延时模式:</string>
    <string name="activity_glue_radius">圆角半径:</string>
    <string name="activity_glue_stopGlueDisPrev">断胶前距离:</string>
    <string name="activity_glue_stopGlueDisNext">断胶后距离:</string>
    <string name="activity_glue_breakGlueLen">提前停胶距离:</string>
    <string name="activity_glue_drawDistance">拉丝距离:</string>
    <string name="activity_glue_drawSpeed">拉丝速度:</string>
    <string name="activity_glue_goTimePrev">动作前延时:</string>
    <string name="activity_glue_goTimeNext">动作后延时:</string>
    <string name="activity_glue_setting">参数设置</string>
    <string name="activity_glue_row">行数</string>
    <string name="activity_glue_column">列数</string>
    <string name="activity_glue_array_method">阵列方式</string>
    <string name="activity_glue_array_x">X轴方向偏移</string>
    <string name="activity_glue_array_y">Y轴方向偏移</string>
    <string name="activity_glue_array_end">终点坐标</string>
    <string name="activity_glue_port">点胶口:</string>
    <string name="activity_glue_port1">点胶口1:</string>
    <string name="activity_glue_port2">点胶口2:</string>
    <string name="activity_glue_port3">点胶口3:</string>
    <string name="activity_glue_port4">点胶口4:</string>
    <string name="activity_glue_port5">点胶口5:</string>
    <string name="activity_glue_io">IO口:</string>
    <string name="activity_glue_io1">IO口1:</string>
    <string name="activity_glue_io2">IO口2:</string>
    <string name="activity_glue_io3">IO口3:</string>
    <string name="activity_glue_io4">IO口4:</string>
    <string name="activity_glue_io5">IO口5:</string>
    <string name="activity_glue_io6">IO口6:</string>
    <string name="activity_glue_io7">IO口7:</string>
    <string name="activity_glue_io8">IO口8:</string>
    <string name="activity_glue_io9">IO口9:</string>
    <string name="activity_glue_io10">IO口10:</string>
    <string name="activity_glue_io11">IO口11:</string>
    <string name="activity_glue_io12">IO口12:</string>
    <string name="activity_glue_point_coord">点坐标设置</string>
    <string name="activity_input_task_name">请输入任务名</string>
    <string name="activity_input_task_num">请输入任务号(1~120)</string>
    <string name="activity_glue_fangan">方案</string>
    <string name="activity_glue_save">保存</string>
    <string name="activity_glue_confirm">确定</string>
    <string name="activity_glue_speed">速度</string>
    <string name="activity_glue_location">定位</string>
    <string name="activity_glue_moshi">模式</string>
    <string name="activity_glue_moni">模拟</string>
    <string name="activity_glue_shijue">视觉</string>
    <string name="activity_glue_fuwei">复位</string>
    <string name="activity_glue_array">阵列</string>
    <string name="activity_glue_zhantie">粘贴</string>
    <string name="activity_glue_shitu">视图</string>
    <string name="activity_glue_complete">完成</string>
    <string name="activity_glue_download">下载</string>
    <string name="activity_glue_cancel">取消</string>
    <string name="activity_glue_pianyi">偏移</string>
    <string name="activity_glue_new_file">新建</string>
    <string name="activity_glue_xiugai">修改</string>
    <string name="activity_glue_export">导出</string>
    <string name="activity_glue_delete">删除</string>
    <string name="activity_glue_upload">上传</string>
    <string name="activity_glue_open">打开</string>
    <string name="activity_glue_quanxuan">全选</string>
    <string name="activity_glue_quanbuxuan">全不选</string>
    <string name="activity_glue_set">设置</string>
    <string name="activity_glue_menu">菜单</string>
    <string name="activity_glue_task_set">任务设置</string>
    <string name="activity_no">否</string>
    <string name="activity_yes">是</string>
    <string name="activity_single">单</string>
    <string name="activity_multify">多</string>
    <string name="activity_x_distance">X轴步距</string>
    <string name="activity_y_distance">Y轴步距</string>
    <string name="activity_z_distance">Z轴步距</string>
    <string name="activity_high_speed">高速度</string>
    <string name="activity_medium_speed">中速度</string>
    <string name="activity_low_speed">低速度</string>
    <string name="activity_track_location">循迹定位</string>
    <string name="activity_track_speed">循迹速度</string>
    <string name="activity_high">高速</string>
    <string name="activity_medium">中速</string>
    <string name="activity_low">低速</string>
    <string name="step_single">单步</string>
    <string name="step_serious">连续</string>
    <string name="activity_running_time">执行时间约:</string>
    <string name="activity_task_number">任务号:</string>
    <string name="activity_task_nZeroCheck">零点校正:</string>
    <string name="activity_task_zero">零点;</string>
    <string name="activity_task_linestart">起始点;</string>
    <string name="activity_task_lineend">结束点;</string>
    <string name="activity_task_accelerate">加速度:</string>
    <string name="activity_task_nBackSnSpeedFir">一次回锡速度:</string>
    <string name="activity_task_nBackSnSumFir">一次回锡量:</string>
    <string name="activity_task_decelerate">减速度:</string>
    <string name="activity_task_xy_move_time">XY轴空走速度:</string>
    <string name="activity_task_height">出锡高度:</string>
    <string name="activity_task_z_move_time">Z轴空走速度:</string>
    <string name="activity_task_inflexion_time">拐点速度:</string>
    <string name="activity_task_nBackSnSpeedSec">二次回锡速度:</string>
    <string name="activity_task_nBackSnSumSec">二次回锡量:</string>
    <string name="activity_task_nBackSnSumThird">三次回锡量:</string>
    <string name="activity_task_nBackSnSumSecFour">四次回锡量:</string>
    <string name="activity_task_nYCheckDis">Y轴校正距离:</string>
    <string name="activity_task_nAutoRunTime">延时运行时间:</string>
    <string name="activity_task_nBaseUnit">基点调整单位:</string>
    <string name="activity_task_nBaseHeight">基点调整高度:</string>
    <string name="activity_task_nNoHardOutGlueTime">防止硬化出胶时间:</string>
    <string name="activity_task_nNoHardOutGlueInterval">防止硬化出胶间隔:</string>
    <string name="activity_task_nRunNum">运行次数:</string>
    <string name="activity_task_bRunNumZero">运行次数清零:</string>
    <string name="activity_task_bTaskBack">任务还原:</string>
    <string name="activity_task_bTaskDelete">任务删除:</string>
    <string name="activity_task_nPauseType">暂停模式:</string>
    <string name="activity_task_max_accelerate">拐点最大加速度:</string>
    <string name="activity_task_nBackSnSpeedThird">三次回锡速度:</string>
    <string name="activity_task_nBackSnSpeedFour">四次回锡速度:</string>
    <string name="activity_task_bBackDefault">恢复出厂设置:</string>
    <string name="activity_x">X:</string>
    <string name="activity_y">Y:</string>
    <string name="activity_z">Z:</string>
    <string name="activity_u">U:</string>
    <string name="activity_mm">mm</string>
    <string name="activity_ms">ms</string>
    <string name="activity_fenghao">;</string>
    <string name="activity_mm_s">mm/s</string>
    <string name="activity_s">s</string>
    <string name="absolute">绝对</string>
    <string name="relative">相对</string>
    <string name="picture_preview">图片预览</string>
    <string name="edittext_search">搜索</string>
    <string name="activity_glue_base">吹锡点</string>
    <string name="activity_glue_jizhun">基准点</string>
    <string name="activity_glue_alone">作业点</string>
    <string name="activity_glue_line_start">起始点</string>
    <string name="activity_glue_line_mid">中间点</string>
    <string name="activity_glue_line_arc">圆弧点</string>
    <string name="activity_glue_line_end">结束点</string>
    <string name="activity_glue_face_start">面起点</string>
    <string name="activity_glue_face_end">面终点</string>
    <string name="activity_glue_cleario">清胶点</string>
    <string name="activity_glue_clear">清胶</string>
    <string name="activity_glue_input">输入IO</string>
    <string name="activity_weld_blow">吹锡点</string>
    <string name="activity_glue_output">输出IO</string>
    <string name="activity_visual_aid">视觉辅助</string>
    <string name="activity_download_task">下载任务</string>
    <string name="activity_setting_task">任务参数</string>
    <string name="task_is_exist_yes">方案中已存在，不需要再保存</string>
    <string name="save_success">保存成功</string>
    <string name="row_not_null">行数不能为空</string>
    <string name="row_not_less_1">行数不能小于1</string>
    <string name="column_not_null">列数不能为空</string>
    <string name="column_not_less_1">列数不能小于1</string>
    <string name="x_offset_x_not_null">X方向x偏移不能为空</string>
    <string name="x_offset_y_not_null">X方向y偏移不能为空</string>
    <string name="x_offset_z_not_null">X方向z偏移不能为空</string>
    <string name="y_offset_x_not_null">Y方向x偏移不能为空</string>
    <string name="y_offset_y_not_null">Y方向y偏移不能为空</string>
    <string name="y_offset_z_not_null">Y方向z偏移不能为空</string>
    <string name="et_end_x_not_null">终点x偏移不能为空</string>
    <string name="et_end_y_not_null">终点y偏移不能为空</string>
    <string name="et_end_z_not_null">终点z偏移不能为空</string>
    <string name="not_null">不能为空</string>
    <string name="is_need_array">需要阵列吗？</string>
    <string name="is_need_download">需要下载吗？</string>
    <string name="is_need_offset">确定偏移吗？</string>
    <string name="upload_task_number">上传的任务号:</string>
    <string name="upload_task_name">保存的任务名:</string>
    <string name="enter_upload_task_number">请输入1-120之间的数</string>
</resources>