<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" >

            <TextView
                android:id="@+id/tv_stopGlueTimePrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:text="@string/activity_weld_work_stopSnTime"
                />

            <EditText
                android:id="@+id/et_lineend_stopGlueTimePrev"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_stopGlueTimePrev"
                android:background="@drawable/task_edittext_bg"
                android:gravity="right|center"
                android:inputType="number"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/extend_ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:layout_toRightOf="@id/et_lineend_stopGlueTimePrev"
                android:text="@string/activity_ms"
                 />

            <TextView
                android:id="@+id/tv_stopGlueTime_ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:text="@string/activity_mm"
                />

            <EditText
                android:id="@+id/et_upHeight"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@id/tv_stopGlueTime_ms"
                android:background="@drawable/task_edittext_bg"
                android:gravity="right|center"
                android:inputType="number"
                android:textColor="#000000"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                 />

            <TextView
                android:id="@+id/tv_upHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:layout_toLeftOf="@id/et_upHeight"
                android:text="@string/activity_weld_work_upHeight"
                 />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/extend_isPause"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="@string/activity_glue_alone_isPause"
                    />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_isPause"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:kswTextOff="@string/activity_no"
                    app:kswTextOn="@string/activity_yes"
                    app:kswThumbHeight="68px"
                    app:kswThumbWidth="90px"
                    android:checked="false" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="18px"
        android:layout_marginRight="18px"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_moren"
            android:layout_width="0dp"
            android:layout_height="130px"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/task_bottom_imagebutton"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_moren"
                android:layout_width="54px"
                android:layout_height="54px"
                android:scaleType="centerInside"
                android:src="@drawable/ic_playlist_add_check_white_48dp"/>

            <TextView
                android:id="@+id/extend_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_moren"
                android:layout_toRightOf="@id/iv_moren"
                android:gravity="center"
                android:text="@string/activity_glue_default"
                android:textColor="@color/color_white"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_save"
            android:layout_width="0dp"
            android:layout_height="130px"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/task_bottom_imagebutton"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_save"
                android:layout_width="54px"
                android:layout_height="54px"
                android:scaleType="centerInside"
                android:src="@drawable/save"/>

            <TextView
                android:id="@+id/extend_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_save"
                android:layout_toRightOf="@id/iv_save"
                android:gravity="center"
                android:text="@string/activity_glue_save"
                android:textColor="@color/color_white"
                />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>